# tic_tac_toe_

./: CMakeLists.txt  LICENSE  README.md
include/: tic_tac_toe.h
src/: main.cpp  tic_tac_toe.cpp
test/: CMakeLists.txt  main.cpp  tic_tac_toe_test.cpp
